chore: update project to visual studio 2022

--- a/vc14/settings.props
+++ b/vc14/settings.props
@@ -41,7 +41,7 @@
     <OTCLIENT_LIBDEPS_D>
         glew32d.lib;
         zlibd.lib;
-        zstdd.lib;
+        zstd.lib;
         physfs.lib;
         openal32.lib;
         lua51.lib;
